--- a/pages/badge/badge.html
+++ b/pages/badge/badge.html
@@ -7,10 +7,26 @@
 		<span class="Badge BadgeWarning">41</span>
 		<span class="Badge BadgeDanger">99+</span>
 	</div>
+	<div class="ContentInnerTitle">圆角样式</div>
+	<div class="MTB MR">
+		<span class="Badge UIRadius">1</span>
+		<span class="Badge BadgePrimary UIRadius">123</span>
+		<span class="Badge BadgeSuccess UIRadius">3</span>
+		<span class="Badge BadgeWarning UIRadius">41</span>
+		<span class="Badge BadgeDanger UIRadius">99+</span>
+	</div>
+	<div class="ContentInnerTitle">椭圆样式</div>
+	<div class="MTB MR">
+		<span class="Badge UIRound">1</span>
+		<span class="Badge BadgePrimary UIRound">123</span>
+		<span class="Badge BadgeSuccess UIRound">3</span>
+		<span class="Badge BadgeWarning UIRound">41</span>
+		<span class="Badge BadgeDanger UIRound">99+</span>
+	</div>
 	<div class="ContentInnerTitle">图标角标</div>
 	<div class="MTB MR">
 		<div style="width:24px;height:24px;" class="PosR">
-			<span class="Badge BadgeDanger" style="position:absolute;top:-3px;right:-3px;">1</span>
+			<span class="Badge BadgeDanger UIRound" style="position:absolute;top:-3px;right:-3px; ">1</span>
 			<img class="Icon" src="images/svg/iconfont-notice.svg" alt="通知" />
 		</div>
 		
