--- a/pages/button/button.html
+++ b/pages/button/button.html
@@ -1,7 +1,6 @@
 ﻿<div class="WAll PL PR PT">
 
 	<p class="ContentBlockTitle">有底色按钮：</p>
-	
 	<ul class="ListBlock ListBase">
 		<li class="ListItem">
 			<a href="javascript:;" class="Btn InkRipple">默认按钮</a>
@@ -12,6 +11,9 @@
 			<span class="Btn BtnWarning InkRipple">警告按钮</span>
 			<b class="Btn BtnDanger InkRipple">危险按钮</b>
 			<b class="Btn BtnDanger BtnGray InkRipple">灰色按钮</b>
+		</li>
+		<li class="ListItem">
+			<a class="Btn BtnLink InkRipple">链接按钮</a>
 		</li>
 	</ul>
 	<p class="ContentBlockTitle">圆形按钮：</p>
@@ -47,23 +49,26 @@
 	<p class="ContentBlockTitle">带数字的按钮</p>
 	<ul class="ListBlock ListBase">
 		<li class="ListItem">
-			<a href="javascript:;" class="Btn InkRipple"><span class="Badge BadgeL">9</span>默认按钮</a>
-			<a href="javascript:;" class="Btn BtnPrimary InkRipple"><span class="Badge BadgeL">9</span>首选按钮</a>
+			<a href="javascript:;" class="Btn InkRipple"><span class="Badge BadgeL UIRound">9</span>默认按钮</a>
+			<a href="javascript:;" class="Btn BtnPrimary InkRipple"><span class="Badge BadgeL UIRound">9</span>首选按钮</a>
 		</li>
 		<li class="ListItem">
-			<a href="javascript:;" class="Btn BtnSuccess InkRipple"><span class="Badge BadgeL">9</span>成功按钮</a>
-			<span class="Btn BtnWarning InkRipple"><span class="Badge BadgeL">9</span>警告按钮</span>
+			<a href="javascript:;" class="Btn BtnSuccess InkRipple"><span class="Badge BadgeL UIRound">9</span>成功按钮</a>
+			<span class="Btn BtnWarning InkRipple"><span class="Badge BadgeL UIRound">9</span>警告按钮</span>
 		</li>
 		<li class="ListItem">
-			<b class="Btn BtnDanger InkRipple">危险按钮<span class="Badge BadgeR">9</span></b>
-			<b class="Btn BtnLine BtnGray InkRipple">灰色按钮<span class="Badge BadgeR">9</span></b>
+			<b class="Btn BtnDanger InkRipple">危险按钮<span class="Badge BadgeR UIRound">9</span></b>
+			<b class="Btn BtnLine BtnGray InkRipple">灰色按钮<span class="Badge BadgeR UIRound">9</span></b>
 		</li>
 	</ul>
 	
 	<p class="ContentBlockTitle">按钮尺寸</p>
 	<ul class="ListBlock ListBase">
-		<li class="ListItem"><button type="button" class="Btn BtnPrimary BtnBig InkRipple">（大按钮）Large button</button></li>
-		<li class="ListItem"><button type="button" class="Btn BtnPrimary BtnSmall InkRipple">（小按钮）Small button</button></li>
+		<li class="ListItem"><button type="button" class="Btn BtnPrimary BtnXl InkRipple">按钮 BtnXl</button></li>
+		<li class="ListItem"><button type="button" class="Btn BtnPrimary BtnBig InkRipple">按钮 BtnBig</button></li>
+		<li class="ListItem"><button type="button" class="Btn BtnPrimary InkRipple">默认按钮</button></li>
+		<li class="ListItem"><button type="button" class="Btn BtnPrimary BtnSmall InkRipple">小按钮 BtnSmall</button></li>
+		<li class="ListItem"><button type="button" class="Btn BtnPrimary BtnXs InkRipple">小按钮 BtnXs</button></li>
 	</ul>
 	
 	<p class="ContentBlockTitle">块级按钮</p>
@@ -74,6 +79,13 @@
 		<li class="ListItem"><button type="button" class="Btn BtnLine BtnSuccess BtnBlock InkRipple">（块级元素）Block level button</button></li>
 	</ul>
 	
+	
+	<p class="ContentBlockTitle">按钮组</p>
+	<div class="BtnGroup">
+		<a href="javascript:;" class="Btn BtnPrimary UIRound InkRipple active">默认按钮</a>
+		<a href="javascript:;" class="Btn BtnPrimary UIRound InkRipple">首选按钮</a>
+		<a href="javascript:;" class="Btn BtnPrimary UIRound InkRipple">成功按钮</a>
+	</div>
 	
 	<p class="ContentBlockTitle">禁用状态</p>
 	<ul class="ListBlock ListBase">
