--- a/pages/dialog/dialog.html
+++ b/pages/dialog/dialog.html
@@ -1,7 +1,8 @@
 ﻿<div class="WAll PL PR PT">
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple AlertBtn">alert警告消息框</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple ConfirmBtn">确认消息框</button>
-	<button type="button" class="Btn BtnBig BtnBlock InkRipple PromptBtn">自动消失提示框</button>
+	<button type="button" class="Btn BtnBig BtnBlock InkRipple WarnBtn">自动消失提醒</button>
+	<button type="button" class="Btn BtnBig BtnBlock InkRipple PromptBtn">提示框</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PickerBtn">底部消息框</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple MenuBtn">底部菜单</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopoverBtn">弹出菜单</button>
