--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -2,7 +2,6 @@
 <div class="WrapContent isBackToTop">
 	<div class="WAll PT">
 	<!--span ng-click="download()">23223232323232</span-->
-
 		<ul class="ListBlock">
 			<li class="ListItem">
 				<a href="#about" class="ItemLink ItemCon InkRipple" id="about">
@@ -107,6 +106,14 @@
 				<a href="#/dialog" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">dialog(消息框)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
+				<a href="#/toast" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">Toast (显示信息)</span></div>
 						<div class="ItemAfter"></div>
 					</div>
 				</a>
