--- a/pages/loading/loading.html
+++ b/pages/loading/loading.html
@@ -20,11 +20,11 @@
 		</div>
 		
 	</div>
-	<div class="ContentBlockTitle">用 <span class="CO">.Progressbar()</span> 可以现在进度条</div>
+	<div class="ContentBlockTitle">用 <span class="CO">.progressbar()</span> 可以现在进度条</div>
 	<a href="javascript:;" class="Btn BtnBlock" ng-click="Progress(2000)">进度条</a>
-	<div class="ContentBlockTitle">用 <span class="CO">.Indicator()</span> 可以模态窗口预载</div>
+	<div class="ContentBlockTitle">用 <span class="CO">.indicator()</span> 可以模态窗口预载</div>
 	<a href="javascript:;" class="Btn BtnPrimary BtnBlock" ng-click="Indicator()">打开加载图标</a>
-	<div class="ContentBlockTitle">用 <span class="CO">.Loading()</span> 可以模态窗口预载</div>
+	<div class="ContentBlockTitle">用 <span class="CO">.loading()</span> 可以模态窗口预载</div>
 	<a href="javascript:;" class="Btn BtnPrimary BtnBlock" ng-click="Loading()">正在加载</a>
 	<a href="javascript:;" class="Btn BtnPrimary BtnBlock"  ng-click="Loadings()">自定义标题</a>
 	<p class="BlockLabel"> </p>
