--- a/pages/form/form.html
+++ b/pages/form/form.html
@@ -134,9 +134,10 @@
 					<div class="ItemTitle Label">滑块</div>
 					<div class="ItemInput">
 						<div class="RangeSlider">
-							<input type="range" min="0" max="100" value="50" step="0.6">
+							<input type="range" ng-model="gggg" min="0" max="100" value="50" step="50">
 						</div>
 					</div>
+					{{gggg}}
 				</div>
 			</div>
 		</li>
