--- a/pages/switch/switch.html
+++ b/pages/switch/switch.html
@@ -35,6 +35,21 @@
 			<div class="ItemCon">
 				<div class="ItemInner">
 					<div class="ItemTitle">
+					状态： {{StateB}}
+					</div>
+					<div class="ItemAfter">
+						<label class="LabelSwitch disabled">
+							<input type="checkbox"/>
+							<div class="checkbox"></div>
+						</label>
+					</div>
+				</div>
+			</div>
+		</li>
+		<li class="ListItem">
+			<div class="ItemCon">
+				<div class="ItemInner">
+					<div class="ItemTitle">
 					状态： {{StateC}}
 					</div>
 					<div class="ItemAfter">
