--- a/pages/tab/tab.html
+++ b/pages/tab/tab.html
@@ -1,4 +1,4 @@
-﻿<div class="WAll">
+﻿<div class="WAll aaaa">
 	<div class="ToolBar TabBar">
 		<ul class="ToolBarInner">
 			<li data-tab="#tab1" class="TabLink active">选项卡 1</li>
@@ -10,6 +10,20 @@
 		<div id="tab1" class="Tab PAll active"><div class="BlockLabel">标签1内容</div></div>
 		<div id="tab2" class="Tab PAll"><div class="BlockLabel">标签2内容</div></div>
 		<div id="tab3" class="Tab PAll"><div class="BlockLabel">标签3内容</div></div>
+	</div>
+</div>
+<div class="WAll bbbb">
+	<div class="ToolBar TabBar ">
+		<ul class="ToolBarInner">
+			<li data-tab="#tab11" class="TabLink active">选项卡 1</li>
+			<li data-tab="#tab21" class="TabLink">选项卡 2</li>
+			<li data-tab="#tab31" class="TabLink">选项卡 3</li>
+		</ul>
+	</div>	
+	<div class="Tabs">
+		<div id="tab11" class="Tab PAll active"><div class="BlockLabel">标签1内容</div></div>
+		<div id="tab21" class="Tab PAll"><div class="BlockLabel">标签2内容</div></div>
+		<div id="tab31" class="Tab PAll"><div class="BlockLabel">标签3内容</div></div>
 	</div>
 </div>
 
