--- a/pages/tab/tabAnimated.html
+++ b/pages/tab/tabAnimated.html
@@ -1,4 +1,4 @@
-﻿<div class="WAll">
+﻿<div class="WAll TAB">
 	<div class="ToolBar TabBar">
 		<ul class="ToolBarInner">
 			<li data-tab="#tab1" class="TabLink active">选项卡 1</li>
