--- a/pages/tab/tabLabel.html
+++ b/pages/tab/tabLabel.html
@@ -1,4 +1,4 @@
-﻿<div class="WAll">
+﻿<div class="WAll TAB">
 	<div class="ToolBar TabBar TabsFixed TabBarLabels">
 		<ul class="ToolBarInner">
 			<li data-tab="#tab1" class="TabLink active"> <span class="TabBarLabel"><img class="Icon" src="images/svg/iconfont-home.svg" alt="主页"/></span> 主页</li>
