--- a/pages/dialog/dialog.html
+++ b/pages/dialog/dialog.html
@@ -7,6 +7,7 @@
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple MenuBtn">底部菜单</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopoverBtn">弹出菜单</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopupBtn">弹出层</button>
+	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopupBtn1">弹出层</button>
 
 </div>
 
