--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -23,7 +23,7 @@
 				</a>
 			</li>
 			<li class="ListItem">
-				<a ui-sref=".button" class="ItemLink ItemCon InkRipple">
+				<a href="#/button" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">button(按钮)</span></div>
 						<div class="ItemAfter"></div>
@@ -55,7 +55,7 @@
 				</a>
 			</li>
 			<li class="ListItem">
-				<a ui-sref=".badge" class="ItemLink ItemCon InkRipple">
+				<a href="#/badge" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">badge(数字角标)</span></div>
 						<div class="ItemAfter"></div>
