--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -1,7 +1,7 @@
 ﻿<!--PageBody-->
 <div class="WrapContent isBackToTop">
 	<div class="WAll PT">
-	<!--span ng-click="download()">23223232323232</span-->
+	<span ng-click="download()" class="SidebarToggle">23223232323232</span>
 		<ul class="ListBlock">
 			<li class="ListItem">
 				<a href="#about" class="ItemLink ItemCon InkRipple" id="about">
