修改细节问题
Change-Id: I389cdfeef94054825242d45139ac312739ab5181

--- a/index.html
+++ b/index.html
@@ -43,3 +43,6 @@
 </body>
 </html>
 <script src="script/_lib/requireJS/require.js" data-main="script/main" defer async="true" ></script>
+<script type="text/javascript">//判断样式是否存在
+
+</script>
