--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -191,6 +191,14 @@
 				</a>
 			</li>
 			<li class="ListItem">
+				<a href="#/transit" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">transit(过渡页)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
 				<a href="#/text" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">background & text(背景和文本)</span></div>
@@ -263,6 +271,14 @@
 	</div>
 </div>			
 <!--PageBody end-->
+
+<footer class="Footer">
+	<div class="FooterLinks">
+		<a class="ItemLink" href="javascript:void(0);">底部链接</a>
+		<a class="ItemLink" href="javascript:void(0);">底部链接</a>
+	</div>
+	<div class="FooterText">Copyright © 2015-2018 kelat</div>
+</footer>
 
 
 
