--- a/pages/box/box.html
+++ b/pages/box/box.html
@@ -26,11 +26,21 @@
 	</div>
 	<div class="ContentBlockTitle">用户卡片</div>
 	
-	<div class="Box BoxUserInfo">
+	<div class="Box">
+		<div class="BoxUserInfo">
 		<div class="BoxHeader NoBorder">
 			<div class="Avatar"><img src="images/01.jpg" width="34" height="34"/></div>
 			<div class="Name">姓名</div>
 			<div class="Date">12/20 13:47</div>
+		</div>
+		</div>
+		<div class="BoxHeaderPic">
+			<div class="BoxHeader NoBorder CW" style="background-image:url(images/03.jpg)" valign="bottom">
+				<div class="BoxMedia">
+					<div class="BoxMediaTitle">山之旅</div>
+					<div class="BoxMediaSub">山之旅</div>
+				</div>
+			</div>
 		</div>
 		<div class="BoxContent">
 			<img src="images/03.jpg" width="100%" class="Img"/>
