修改过渡页
Change-Id: If2ce662649c177ba73e5a53c3b0e8fb673ebbdda

--- a/pages/picker/picker.html
+++ b/pages/picker/picker.html
@@ -47,6 +47,20 @@
 			</li>
 		</ul>
 	</div>
+	<div class="ContentBlockTitle">地址联动</div>
+	<div class="ListBlock">
+		<ul>
+			<li>
+				<div class="ItemCon">
+					<div class="ItemInner">
+						<div class="ItemInput">
+							<input type="text" placeholder="地址" readonly="" class="InputContr" id="ks-picker-dependent1"/>
+						</div>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div>
 	<div class="ContentBlockTitle">自定义工具栏</div>
 	<div class="ListBlock">
 		<ul>
